--- a/.gitattributes
+++ b/.gitattributes
@@ -32,3 +32,4 @@
 *.cginc filter=lfs diff=lfs merge=lfs -text
 *.mp4 filter=lfs diff=lfs merge=lfs -text
 *.renderTexture filter=lfs diff=lfs merge=lfs -text
+*.cs linguist-language=C#
